# Perci

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Initialize-Perci-Cortex.ps1  LICENSE-APACHE  LICENSE-MIT  Launch-Perci.ps1  README.md  Start-Perci.cmd  VALIDATION.md  WEIGHTS.md  build.rs
Cortex/: .editorconfig  .gitignore  BENCHMARK_REPORT.md  BUILD_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cortex-All-One.ps1  PERCI_INTEGRATION_PATCHES.md  README.md  RELEASE_MANIFEST.json  TEST_REPORT.md  UPSTREAM.json  cortex-all-one.sh  cortex.ps1  cortex.sh  pyproject.toml
Cortex/.github/workflows/: tests.yml
Cortex/benchmarks/: self_host_benchmark.py  sparse_activation_benchmark.py  thalamus_before_after.py  thresholds.json  vector_migration_benchmark.py
Cortex/benchmarks/results/: self_host_before_after.json  thalamus_before_after.json
Cortex/config/: AGENTS.md
Cortex/cortex/: __init__.py  activation.py  benchmark.py  bootstrap.py  bridge.py  cli.py  config.py  context.py  efficiency.py  embeddings.py  environment.py  governor.py  graph.py  health.py  hippocampus.py  indexer.py  integration.py  models.py  parsers.py  retrieval.py  selftest.py  store.py  telemetry.py  verify.py
Cortex/cortex/learning/: __init__.py  outcomes.py
Cortex/cortex/neuron/: __init__.py  compiler.py  engine.py  models.py  plasticity.py
Cortex/docs/: AI_INTEGRATION.md  ARCHITECTURE.md  BOOTSTRAP_PROTOCOL.md  CROSS_DOMAIN_ANALYSIS.md  DATA_MODEL.md  NEURAL_INTERLINK.md  PHOENIX_BOUNDARY.md  SECURITY.md  THALAMUS.md  TROUBLESHOOTING.md  V2_OUTCOME_LEARNING.md
Cortex/examples/: AGENT_PROMPT.md
Cortex/scripts/bash/: bootstrap-cortex-repo.sh  cortex-all-in-one.sh  cortex-session.sh  install-cortex.sh  run-tests.sh
Cortex/scripts/powershell/: Bootstrap-CortexRepo.ps1  Cortex-All-One.ps1  Cortex-Session.ps1  Install-Cortex.ps1  Run-Tests.ps1
Cortex/templates/: cortex-config.example.json
Cortex/tests/: test_cortex.py  test_neural_interlink.py  test_thalamus.py  test_verify_retrieval_probe.py
Cortex/thalamus/: __init__.py  classifier.py  feedback.py  inhibition.py  models.py  router.py
assets/: README.md
config/: personality.prompt
docs/: AI_EVOLVE_PROTOCOL.md  BITWORK_COGNITION_v0622.md  BITWORK_EMERGENCE.md  BITWORK_MATH_PATH.md  BITWORK_V3_EVIDENCE.md  BREAKTHROUGH_FOUR_v0625.md  CAPABILITY_FABRIC_v070.md  CAPABILITY_SCORECARD.md  COGNITIVE_WORKSPACE.md  CORTEX_INTEGRATION.md  CROSS_DOMAIN_EVOLUTION.md  DARK_BLOOD_CLI.md  EIC_V1_6_ALIGNMENT.md  EMERGENCE_LEDGER.md  (+21 more)
(+447 files in other folders)
