[package]
name = "perci"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "A compact governed neuro-symbolic CLI with Bitwork cognition and Cortex memory"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "perci"
path = "src/main.rs"