[package]
name = "perci"
version = "0.8.5"
edition = "2021"
rust-version = "1.75"
description = "A compact governed neuro-symbolic CLI with Bitwork cognition, fast Cortex recall, and intelligence packs"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[dependencies]
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[[bin]]
name = "perci"
path = "src/main.rs"
