[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-memory"
version = "2.0.0"
description = "Local-first repository assimilation, selective memory, and sparse neural interlinking for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "James Paul Jackson"}]
keywords = ["codex", "rag", "memory", "repository", "sqlite", "agents", "neural", "interlink"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
semantic = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
cortex = "cortex.cli:main"

[tool.setuptools.packages.find]
include = ["cortex*", "thalamus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
